--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       }
     </script>
     <script src="//img.chinanetcenter.com/lib/lodash/4.17.11/lodash.min.js"></script>
-    <script src="//img.chinanetcenter.com/lib/vue/2.6.10/vue.min.js"></script>
+    <script src="//img.chinanetcenter.com/lib/vue/2.6.10/vue.js"></script>
     <script src="//img.chinanetcenter.com/lib/element-ui/2.11.1/index.js"></script>
     <!-- built files will be auto injected -->
   </body>
